--- a/project.html
+++ b/project.html
@@ -128,7 +128,7 @@
                                 <li>CSS</li>
                                 <li>Bootstrap</li>
                             </ul>
-                <a id="a3" href="portfolio.html" class="btn btn-primary">Click Here</a> 
+                <a id="a3" href="index.html" class="btn btn-primary">Click Here</a> 
             </div>
     </div>
         </div>
