--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <h1 id="w"><b>Welcome to my Official Website!</b></h1>
     <p><h4 id="c" style="color:black;">It gives an insigth about me, my skills and the projects 
         i've worked on till now.</h4></p>
-        <button class="bn"><a id="aa" href="./resume.pdf" download>Resume</a></button> 
+        <button class="bn"><a id="aa" href="./Resume.pdf" download>Resume</a></button> 
         <div class="container">
                 <div class="center">
                         <button class="button"><a id="a1" href="extra.html">Click here to know more about me!</a></button>
