--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
   <style>
+    html,body{
+            width:100%;
+            height:100%;
+            margin:0px;
+            padding:0px;
+            overflow-x:hidden;
+         }
       body{
           background-image: url("flo.jpg");
       }
